--- a/index.html
+++ b/index.html
@@ -1352,7 +1352,7 @@
 			}
 
 			.paragraphe p{
-				font-size: 1rem;
+				font-size: .9rem;
 			}
 
 			.premier .paragraphe h1{
@@ -1361,7 +1361,7 @@
 			}
 
 			.premier .paragraphe p{
-				font-size: 1rem;
+				font-size: .9rem;
 			}
 
 			.paragraphe h1{
@@ -1369,7 +1369,7 @@
 			}
 
 			.premier .paragraphe a{
-				font-size: 1rem;
+				font-size: .9rem;
 			}
 
 			#droite, #gauche{
