--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>Studio B</title>
 </header>
 <body>
-	<div id="logo"><a href="https://www.instagram.com/studiofaceb/" target="_blank"><img class="logo_insta" src="instagram.png" alt="instagram Studio face b"></a>&nbsp;<a href="https://open.spotify.com/playlist/7GYx8eLXV8kEBvOggwUkSH?si=5k0LoNVvRAyd5UoFg0NPTg" target="_blank"><img class="logo_spotify" src="spotify.png" alt="spotify StudioB"></a></div>
+	<div id="logo"><a href="https://www.instagram.com/studiofaceb/" target="_blank"><img class="logo_insta" src="images/instagram.png" alt="instagram Studio face b"></a>&nbsp;<a href="https://open.spotify.com/playlist/7GYx8eLXV8kEBvOggwUkSH?si=5k0LoNVvRAyd5UoFg0NPTg" target="_blank"><img class="logo_spotify" src="images/spotify.png" alt="spotify StudioB"></a></div>
 	<div id="contener">
 		<video src="back4.mp4" muted autoplay width="100%"></video>
 		<div class="animate seven">
@@ -24,7 +24,7 @@
 	<!-- Prestations -->
 	<section id="prestations">
 		<article id="gauche" class="premier">
-			<div class="photo"><img src="relation1.jpg" alt="Studio B Billie B about development and artistic direction agency"></div>
+			<div class="photo"><img src="images/relation1.jpg" alt="Studio B Billie B about development and artistic direction agency"></div>
 			<div class="paragraphe">
 				<h1>About</h1>
 				<p>STUDIO B is a development and artistic direction agency, created by Billie B. Billie B is a Franco-Swedish Artist, singer and songwriter born in France. She graduated with a high-school diploma in literature in 2014, as an external candidate and continued with art studies as she was working.<br /><br />She started to work with DJs and producers for different music projects, her role was to compose lyrics and toplines. In 2015, she moved to Stockholm. Billie develops her skills for the creation of identity for places and artists.<br/><br/>After creating different concepts for different restaurants and bars, she graduated an artistic development diploma in 2017. In 2019, she worked as the topliner and lyricist on the track “Night” with Merlin Records. Billie is also the co-creator of the web magazine <a href="http://blackdecks.se/">BLACKDECKS</a>.
@@ -37,10 +37,10 @@
 				<h1>Branding</h1>
 				<p>The brand is a visual representation of identity. It is essential to understand the importance of the image in any artistic conception: how we decide to communicate, what we decide to highlight and how to highlight it...<br><br>Studio B assists you find your image what inspires you and what makes you unique.</p>
 			</div>
-			<div class="photo element"><img src="image2.jpg" alt="Orville © DAVID MOLLÉ"></div>
+			<div class="photo element"><img src="images/image2.jpg" alt="Orville © DAVID MOLLÉ"></div>
 		</article>
 		<article id="gauche">
-			<div class="photo"><img src="image7.jpg" alt="Jess Glynne ©cover'Always in between'JessGlynne"></div>
+			<div class="photo"><img src="images/image7.jpg" alt="Jess Glynne ©cover'Always in between'JessGlynne"></div>
 			<div class="paragraphe">
 				<h1>LINKING</h1>
 				<p>The people with whom you decide to work will play a major role in the quality of your art. It's important to work with people who understand you and who will guide you while respecting your personality.<br /><br />Studio B puts you in contact with professionals adapted to your universe and your needs... Recording studios, Producers, vocal coach, Agents.</p>
@@ -51,7 +51,7 @@
 				<h1>DEVELOPMENT</h1>
 				<p>The last step is to put the whole process into practice : photographer, web designer and stylist, to be consistent with who you are and with the people you target.<br><br>Studio B also helps you to set up a marketing strategy, be visible on social networks, how to communicate and reach your audience the one we have defined.</p>
 			</div>
-			<div class="photo element"><img src="image1.jpg" alt="halsey ©cover'hopeless fountain kingdom'Hasley"></div>
+			<div class="photo element"><img src="images/image1.jpg" alt="halsey ©cover'hopeless fountain kingdom'Hasley"></div>
 		</article>
 	</section>
 
@@ -66,15 +66,15 @@
 		@font-face
 		{
 			font-family: 'BebasNeue-Bold';
-			src: url('BebasNeue-Bold.ttf'),
-			url('BebasNeue-Bold.otf');
+			src: url('fonts/BebasNeue-Bold.ttf'),
+			url('fonts/BebasNeue-Bold.otf');
 		}
 
 		@font-face
 		{
 			font-family: 'BebasNeue-Regular';
-			src: url('BebasNeue-Regular.ttf'),
-			url('BebasNeue-Regular.otf');
+			src: url('fonts/BebasNeue-Regular.ttf'),
+			url('fonts/BebasNeue-Regular.otf');
 		}
 
 		body{
