commentaire et new formulation

--- a/index.html
+++ b/index.html
@@ -62,7 +62,11 @@
 	</section>
 
 	<style type="text/css">
-	/*-------------------- Fonts --------------------*/
+
+/* ---------------------------------------------- */
+/* -------------------- Fonts ------------------- */
+/* ---------------------------------------------- */
+
 		@font-face
 		{
 			font-family: 'BebasNeue-Bold';
@@ -77,12 +81,19 @@
 			url('fonts/BebasNeue-Regular.otf');
 		}
 
+/* ---------------------------------------------- */
+/* ------------------- Body --------------------- */
+/* ---------------------------------------------- */
+
 		body{
 			margin: 0;
 			width: 100%;
 		}
 
-		/*------------- Logo networks ---------------*/
+/* ---------------------------------------------- */
+/* --------------- Logo networks ---------------- */
+/* ---------------------------------------------- */
+
 		.logo_insta
 		{
 			width: 30px;
@@ -164,7 +175,11 @@
 			width: 100%;
 			text-align: center;
 		}
-		/*-------------------- Video --------------------*/
+
+/* ---------------------------------------------- */
+/* ------------------- Video -------------------- */
+/* ---------------------------------------------- */
+
 		video
 		{
 			width: 100%;
@@ -174,8 +189,9 @@
 		@media only screen and (max-width: 450px){
 
 		}
-
-		/*-------------------- Title --------------------*/
+/* ---------------------------------------------- */
+/* ------------------- Title -------------------- */
+/* ---------------------------------------------- */
 
 		@media only screen and (min-width: 1940px) {
 			.animate {
@@ -590,17 +606,6 @@
 
 			@keyframes leftRight
 			{
-				/*40%
-				{
-				transform: translate(50px, 0) scale(.7);
-				opacity: 1;
-				color: #FFF3F5;
-			}
-
-			60%
-			{
-			color: #FFF3F5;
-			}*/
 			80%
 			{
 				transform: translate(0) scale(2);
@@ -663,17 +668,6 @@
 
 			@keyframes leftRight
 			{
-				/*40%
-				{
-				transform: translate(50px, 0) scale(.7);
-				opacity: 1;
-				color: #FFF3F5;
-			}
-
-			60%
-			{
-			color: #FFF3F5;
-			}*/
 			80%
 			{
 				transform: translate(0) scale(2);
@@ -736,17 +730,6 @@
 
 			@keyframes leftRight
 			{
-				/*40%
-				{
-				transform: translate(50px, 0) scale(.7);
-				opacity: 1;
-				color: #FFF3F5;
-			}
-
-			60%
-			{
-			color: #FFF3F5;
-			}*/
 			80%
 			{
 				transform: translate(0) scale(2);
@@ -823,17 +806,7 @@
 
 			@keyframes leftRight
 			{
-				/*40%
-				{
-				transform: translate(50px, 0) scale(.7);
-				opacity: 1;
-				color: #FFF3F5;
-			}
 
-			60%
-			{
-			color: #FFF3F5;
-			}*/
 			80%
 			{
 				transform: translate(0) scale(2);
@@ -1086,7 +1059,10 @@
 											transform: translate(-150px, 0) scale(.3);
 											animation: leftRight 3s forwards;
 										}}
-		/*----------------- Introduction -----------------*/
+
+/* ---------------------------------------------- */
+/*----------------- Introduction -----------------*/
+/* ---------------------------------------------- */
 
 		#laius
 		{
@@ -1096,7 +1072,9 @@
 			width: 100%;
 		}
 
-		/*------- Left Part ------*/
+/* ---------------------- */
+/* ----- left Part ------ */
+
 		.laius
 		{
 			padding-top: 2rem;
@@ -1115,7 +1093,8 @@
 			font-family: 'BebasNeue-Bold';
 		}
 
-		/*------ Right Part -----*/
+/* ---------------------- */
+/* ----- Right Part ----- */
 
 		.laius1
 		{
@@ -1352,7 +1331,9 @@
 			}
 		}
 
-		/*----------------- Prestations -----------------*/
+/* --------------------------------------------- */
+/*----------------- Prestations -----------------*/
+/* --------------------------------------------- */
 
 		#prestations
 		{
@@ -1361,7 +1342,9 @@
 			margin-left: 0%;
 		}
 
-		/*------- First ------*/
+/* -----------------------*/
+/*-------- First ---------*/
+
 		#gauche.premier
 		{
 
@@ -1391,7 +1374,9 @@
 			font-size: 1rem;
 		}
 
-		/*------ Both -------*/
+/* -----------------------*/
+/*-------- Both ----------*/
+
 
 		#droite, #gauche
 		{
@@ -1425,7 +1410,6 @@
 
 		.paragraphe p
 		{
-			/*text-transform: uppercase;*/
 			font-family: helvetica;
 			font-size: 1rem;
 			margin-top: -8%;
@@ -1439,17 +1423,20 @@
 			margin-top: -3%;
 		}
 
-		/*------ Left -----*/
+/* -----------------------*/
+/*-------- Left  ---------*/
 
 		#gauche .paragraphe
 		{
 			flex:40%;
 			padding-left: 5%;
 			padding-right: 5%;
-        	color: #000;
+    	color: #000;
 		}
 
-		/*----- Right ----*/
+/* -----------------------*/
+/*-------- Right ---------*/
+
 
 		#droite .paragraphe
 		{
@@ -1458,6 +1445,7 @@
 			padding-right: 5%;
         	color: #000;
 		}
+
 		@media only screen and (min-width: 1990px){
 
 			#prestations{
@@ -1489,6 +1477,7 @@
 				margin-top: -10%;
 			}
 		}
+
 		@media only screen and (max-width: 1990px){
 
 			#prestations{
@@ -1623,6 +1612,7 @@
 				margin-top: -3%;
 			}
 		}
+
 		@media only screen and (max-width: 920px){
 
 			#prestations{
@@ -1805,7 +1795,9 @@
 					}}
 
 
-		/*----------------- Contact -----------------*/
+/* ---------------------------------------------- */
+/* ------------------- Contact ------------------ */
+/* ---------------------------------------------- */
 
 		#contact
 		{
@@ -1823,7 +1815,7 @@
 		{
 			text-transform: uppercase;
 			font-family: 'BebasNeue-Bold';
-			font-size: 3em;
+			font-size: 2.5em;
 			color: white;
 		}
 
@@ -1831,7 +1823,7 @@
 		{
 			margin-top: 0%;
 			font-family: helvetica;
-			font-size: 1.5em;
+			font-size: 1em;
 			color: #fff;
 		}
 
